--- a/src/components/recommendation-movie-detail/recommendation-movie-detail.styles.scss
+++ b/src/components/recommendation-movie-detail/recommendation-movie-detail.styles.scss
@@ -86,5 +86,6 @@
 
   .no-recommendation {
     padding: 1rem 0;
+    font-size: .75rem;
   }
 }
